@@ -1757,6 +1757,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 🪱,1FAB1,,Liz Bravo,2020-03-07
 🫒,1FAD2,,Liz Bravo,2020-03-07
 🪰,1FAB0,,Liz Bravo,2020-03-07
+🪠,1FAA0,,Liz Bravo,2020-03-11
 🪥,1FAA5,,Liz Bravo,2020-03-11
 🪄,1FA84,,Liz Bravo,2020-03-11
 🪆,1FA86,,Liz Bravo,2020-03-11
