@@ -38,7 +38,6 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🛗,1F6D7,objects,household,elevator,"accessibility, hoist, lift",,,,,,,,13,3560
 🪞,1FA9E,objects,household,mirror,"reflection, reflector, speculum",,,,,,,,13,3561
 🪟,1FA9F,objects,household,window,"frame, fresh air, opening, transparent, view",,,,,,,,13,3562
-🪠,1FAA0,objects,household,plunger,"force cup, plumber, suction, toilet",,,,,,,,13,3569
 🪤,1FAA4,objects,household,mouse trap,"bait, mousetrap, snare, trap",,,,,,,,13,3572
 🪣,1FAA3,objects,household,bucket,"cask, pail, vat",,,,,,,,13,3579
 🪦,1FAA6,objects,other-object,headstone,"cemetery, grave, graveyard, tombstone",,,,,,,,13,3588
