@@ -2703,6 +2703,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🛋️,1F6CB,objects,household,couch and lamp,"couch, hotel, lamp",furniture,Lisa Schulz,2018-04-18,,,,,0.7,3566
 🪑,1FA91,objects,household,chair,"seat, sit",,Sam Eckert,2019-05-06,,,,,12,3567
 🚽,1F6BD,objects,household,toilet,toilet,,Lisa Schulz,2018-04-18,,,,,0.6,3568
+🪠,1FAA0,objects,household,plunger,"force cup, plumber, suction, toilet",,Liz Bravo,2020-03-11,,,,,13,3569
 🚿,1F6BF,objects,household,shower,water,wash,Lisa Schulz,2018-04-18,,,,,1,3570
 🛁,1F6C1,objects,household,bathtub,bath,"wash, water, foam",Lisa Schulz,2018-04-18,,,,,1,3571
 🪒,1FA92,objects,household,razor,"sharp, shave",,Sam Eckert,2019-05-06,,,,,12,3573
