@@ -45968,6 +45968,23 @@
     "order": 3568
   },
   {
+    "emoji": "🪠",
+    "hexcode": "1FAA0",
+    "group": "objects",
+    "subgroups": "household",
+    "annotation": "plunger",
+    "tags": "force cup, plumber, suction, toilet",
+    "openmoji_tags": "",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2020-03-11",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13,
+    "order": 3569
+  },
+  {
     "emoji": "🚿",
     "hexcode": "1F6BF",
     "group": "objects",
